styled filters custom scrollbar, fixed a bug in tag selection when scroll bar is visible on filters

--- a/app/static/css/site.styl
+++ b/app/static/css/site.styl
@@ -12,8 +12,11 @@ $warning-bg-color = rgba(185, 74, 72, 0.69)
 $std-border-radius = 10px
 $modal-dialog-bg = #EAEAEA
 
-.filterscroll
-  overflow-y scroll
+#market-filters
+  .mCSB_container
+    margin-right: 12px;
+  .mCustomScrollBox.mCS-light
+    max-width 97%!important
 
 .filterbuttons-cont
   max-height 200px
